Table "admins" {
  "id" varchar
  "email" string
  "encrypted_password" string
  "reset_password_token" string
  "reset_password_sent_at" datetime
  "remember_created_at" datetime
  "created_at" datetime
  "updated_at" datetime
}

Table "artwork_canvases" {
  "id" varchar
  "artwork_id" integer
  "pixel_data" text
  "width" integer
  "height" integer
  "created_at" datetime
  "updated_at" datetime
}

Table "artwork_tags" {
  "id" varchar
  "artwork_id" integer
  "tag_id" integer
  "created_at" datetime
  "updated_at" datetime
}

Table "artworks" {
  "id" varchar
  "user_id" integer
  "title" string
  "description" text
  "is_public" boolean
  "created_at" datetime
  "updated_at" datetime
}

Table "comments" {
  "id" varchar
  "user_id" integer
  "artwork_id" integer
  "content" text
  "created_at" datetime
  "updated_at" datetime
}

Table "likes" {
  "id" varchar
  "user_id" integer
  "artwork_id" integer
  "created_at" datetime
  "updated_at" datetime
}

Table "relationships" {
  "id" varchar
  "follower_id" integer
  "followed_id" integer
  "created_at" datetime
  "updated_at" datetime
}

Table "reports" {
  "id" varchar
  "reportable_type" string
  "reportable_id" integer
  "reported_by_user_id" integer
  "reason" integer
  "description" text
  "status" integer
  "created_at" datetime
  "updated_at" datetime
  "is_read" boolean
}

Table "tags" {
  "id" varchar
  "name" string
  "created_at" datetime
  "updated_at" datetime
}

Table "users" {
  "id" varchar
  "email" string
  "encrypted_password" string
  "display_name" string
  "account_name" string
  "introduction" text
  "status" integer
  "reset_password_token" string
  "reset_password_sent_at" datetime
  "remember_created_at" datetime
  "created_at" datetime
  "updated_at" datetime
  "is_guest" boolean
}

Ref "fk_artwork_tags_artworks":"artwork_tags"."artwork_id" > "artworks"."id"

Ref "fk_artwork_tags_tags":"artwork_tags"."tag_id" > "tags"."id"

Ref "fk_artworks_users":"artworks"."user_id" > "users"."id"

Ref "fk_artwork_canvases_artworks":"artwork_canvases"."artwork_id" - "artworks"."id"

Ref "fk_comments_artworks":"comments"."artwork_id" > "artworks"."id"

Ref "fk_comments_users":"comments"."user_id" > "users"."id"

Ref "fk_likes_artworks":"likes"."artwork_id" > "artworks"."id"

Ref "fk_likes_users":"likes"."user_id" > "users"."id"

Ref "fk_relationships": "relationships"."follower_id" < "users"."id"

Ref "fk_relationships": "relationships"."followed_id" < "users"."id"

Ref "fk_reports_users": "reports"."reported_by_user_id" > "users"."id"

Ref "polymorphic_reportsables": "reports"."reportable_id" > "users"."id"

Ref "polymorphic_reportsables": "reports"."reportable_id" > "artworks"."id"

Ref "polymorphic_reportsables": "reports"."reportable_id" > "comments"."id"
